Add README, WiFi config template, and monitoring scripts for Badger 2040 W badge

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore WiFi credentials
+# Ignore WiFi credentials (but keep template)
 WIFI_CONFIG.py
+!WIFI_CONFIG.py.template
 
 # Python
 __pycache__/
