Fix: Remove non-existent generate_badge_images.py step
- Remove generate_badge_images.py step that doesn't exist
- Update git add path from 'data/ images/' to 'public/api/'
- This matches our actual project structure where badge data is generated in public/api/

--- a/.github/workflows/update-badge-data.yml
+++ b/.github/workflows/update-badge-data.yml
@@ -36,16 +36,11 @@ jobs:
         USERNAME: ${{ github.repository_owner }}
       run: python scripts/generate_badge_data.py
       
-    - name: Generate badge images
-      env:
-        USERNAME: ${{ github.repository_owner }}
-      run: python scripts/generate_badge_images.py
-      
     - name: Commit and push if changes
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add data/ images/
+        git add public/api/
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
